Cleaned up code. Ready to publish public

--- a/Dec11/Makefile
+++ b/Dec11/Makefile
@@ -1,12 +1,12 @@
 CC=gcc
 CFLAGS=-Wall -Wextra -pedantic -std=gnu99 -g
 LDFLAGS=-lm
-PROGRAMS=Dec1
+PROGRAMS=Dec11
 TESTS=..
 
 .PHONY: all test clean ../src.zip
 
-all: $(PROGRAMS)
+all: $(PROGRAMS) -lm
 
 clean: 
 	rm -rf $(PROGRAMS)  *.o core
